Removed overflow: hidden from #elementor-inner. Fixed #415

--- a/assets/css/editor-preview-rtl.css
+++ b/assets/css/editor-preview-rtl.css
@@ -222,8 +222,6 @@ body.elementor-editor-active #elementor {
   @media (max-width: 1023px) {
     body.elementor-editor-active #elementor .elementor-column > .ui-resizable-e, body.elementor-editor-active #elementor .elementor-column > .ui-resizable-w {
       display: none !important; } }
-body.elementor-editor-active #elementor-inner {
-  overflow: hidden; }
 @media (min-width: 768px) {
   body.elementor-editor-active .elementor-column-wrap.elementor-element-empty .elementor-widget-wrap {
     padding: 10px; } }
