--- a/assets/scss/editor/editor-preview.scss
+++ b/assets/scss/editor/editor-preview.scss
@@ -466,10 +466,6 @@ body {
 			}
 		}
 
-		#elementor-inner {
-			overflow: hidden; // For blank page detection
-		}
-
 		.elementor-column-wrap {
 
 			&.elementor-element-empty {
